--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,19 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   supabase_flutter: ^2.12.0
-  flutter_dotenv: ^5.1.0
+  flutter_dotenv: ^5.2.1
+  provider: ^6.1.5+1
+  go_router: ^17.0.1
+  carousel_slider: ^5.1.1
+  pull_to_refresh: ^2.0.0
+  shared_preferences: ^2.5.3
+  permission_handler: ^12.0.1
+  shimmer: ^3.0.0
+  marquee: ^2.3.0
+  fluttertoast: ^9.0.0
+  animate_do: ^4.2.0
+  lottie: ^3.3.1
+
 
 dev_dependencies:
   flutter_test:
