--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   animate_do: ^4.2.0
   lottie: ^3.3.1
   modal_progress_hud_nsn: ^0.5.1
+  flutter_bloc: ^9.1.1
 
 
 dev_dependencies:
