--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   lottie: ^3.3.1
   modal_progress_hud_nsn: ^0.5.1
   flutter_bloc: ^9.1.1
+  equatable: ^2.0.8
+  hydrated_bloc: ^10.1.1
+  path_provider: ^2.1.5
+  badges: ^3.1.2
 
 
 dev_dependencies:
