--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,7 @@ dependencies:
   carousel_slider: ^5.1.1
   pull_to_refresh: ^2.0.0
   shared_preferences: ^2.5.3
-  permission_handler: ^12.0.1
   shimmer: ^3.0.0
-  marquee: ^2.3.0
   fluttertoast: ^9.0.0
   animate_do: ^4.2.0
   lottie: ^3.3.1
@@ -66,7 +64,13 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.4
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
+  min_sdk_android: 21
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
